Fixed white space and href bugs

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -74,6 +74,7 @@
 }
 
 #mapView {
+    display: none;
     width: auto;
     height: 55vh;
 }
